turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:17: error: Unmatched closing brace '}' ignored here
	}
        ^LangtonsAnt:22: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:35: error: Unmatched closing brace '}' ignored here
}
^